syntax = "proto3";

package memorize;

// The Memorize cache service
service Memorize {
  // Get a value by key
  rpc Get(GetRequest) returns (GetResponse);
  
  // Set a value with TTL
  rpc Set(SetRequest) returns (SetResponse);
  
  // Delete a key
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  
  // List all keys (non-expired)
  rpc Keys(KeysRequest) returns (KeysResponse);
  
  // Check if a key exists
  rpc Contains(ContainsRequest) returns (ContainsResponse);
  
  // Bi-directional streaming for batch/pipelined operations
  rpc Execute(stream Command) returns (stream CommandResponse);
}

// === Unary Request/Response Messages ===

message GetRequest {
  string key = 1;
}

message GetResponse {
  optional string value = 1;  // None if key doesn't exist or expired
  bool found = 2;
}

message SetRequest {
  string key = 1;
  string value = 2;
  uint64 ttl_seconds = 3;  // Time-to-live in seconds
}

message SetResponse {
  bool success = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool deleted = 1;  // true if key existed
}

message KeysRequest {
  optional string pattern = 1;  // Future: support pattern matching
}

message KeysResponse {
  repeated string keys = 1;
}

message ContainsRequest {
  string key = 1;
}

message ContainsResponse {
  bool exists = 1;
}

// === Streaming Command Messages ===

message Command {
  string id = 1;  // Client-provided ID to correlate responses
  
  oneof command {
    GetRequest get = 2;
    SetRequest set = 3;
    DeleteRequest delete = 4;
    KeysRequest keys = 5;
    ContainsRequest contains = 6;
  }
}

message CommandResponse {
  string id = 1;  // Correlates to Command.id
  
  oneof response {
    GetResponse get = 2;
    SetResponse set = 3;
    DeleteResponse delete = 4;
    KeysResponse keys = 5;
    ContainsResponse contains = 6;
    ErrorResponse error = 7;
  }
}

message ErrorResponse {
  string message = 1;
  int32 code = 2;
}
